Fix backend CORS configuration and Render port binding